# DNS-based-DDoS-mitigation

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  auth  client  host  local  test
application/: CMakeLists.txt  Makefile  auth  auth.c  client  client.c  host  host.c  local.c
application-cbf/: auth  bot  client  local  test
application-cbf/include/: circular_buffer.h  puzzle.h  tcp_syn_monitor.h
application-cbf/src/: auth.c  local.c  monitor.c
application-cbf/src/monitor/: detect_ddos.c  tcp_syn_monitor.c
application/include/: detect_ddos.h  error.h  monitor_log.h  puzzle.h  tcp_syn_monitor.h  udp.h
application/src/: auth.c  bot.c  client.c  monitor.c  test.c
application/src/monitor/: circular_buffer.c  detect_ddos.c  main.c  monitor_log.c  packet_handler.c  tcp_syn_monitor.c
include/: detect_ddos.h  puzzle.h
kernel(desktop)/include/linux/: syscalls.h  tcp.h
kernel(desktop)/include/net/: puzzle.h  tcp.h
kernel(desktop)/net/: Makefile  puzzle.c
kernel(desktop)/net/ipv4/: tcp_input.c  tcp_ipv4.c  tcp_output.c
kernel/include/linux/: syscalls.h  tcp.h
kernel/include/net/: puzzle.h  tcp.h
kernel/net/: Makefile  puzzle.c
monitor/: CMakeLists.txt  Makefile  README  circular_buffer.c  circular_buffer.h  main.c  packet_capture.c  packet_handler.c  packet_handler.h  tcp_syn_monitor.c  tcp_syn_monitor.h
monitor/include/: packet_handler.h
monitor/src/: circular_buffer.c  main.c  packet_handler.c  tcp_syn_monitor.c
slides/: README.md
src/: auth.c  client.c  host.c  local.c  monitor.c  poff.c  test.c
src/monitor/: main.c
(+5 files in other folders)
